[ACPI] fix ability to set thermal trip points (Hugo Haas, Stefan Seyfried) eg. # echo -n "100:90:80:70:60:50" > /proc/acpi/thermal_zone/THRM/trip_points http://bugzilla.kernel.org/show_bug.cgi?id=2588